--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -4,3 +4,26 @@ body {
   text-align: center;
   color: white;
 }
+
+h1 {
+  font-size: 50px;
+}
+
+h2 {
+  font-size: 42px;
+  font-weight: 300;
+}
+
+a {
+  font-size: 16px;
+  color: aquamarine;
+}
+
+p {
+  font-size: 21px;
+  color: gray;
+}
+
+#footer p {
+  text-align: right;
+}
